tests/invalid/mutating_literal.php
<?php

array_pop([1, 2, 3]);
sort([3, 1, 2]);

